Adding title to page

--- a/Views/STPBCF/Index.cshtml
+++ b/Views/STPBCF/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewData["Title"] = "STP BCF";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+<div class="page-header">
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+    </div>
 </div>
+
