--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="page-content container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
