--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Subscriptions Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+<div class="page-header">
+    <div class="page-title">
+        <h1 class="title-text">Subscription Groups</h1>
+    </div>
 </div>
