Adding isactive checkboxes to subscription groups

--- a/Views/BCFSubscriptions/Index.cshtml
+++ b/Views/BCFSubscriptions/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "BCF Subscriptions";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+<div class="page-header">
+    <div class="page-title">
+        <h1 class="title-text">BCF Subscriptions</h1>
+    </div>
 </div>
