--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -6,3 +6,14 @@
         <h1 class="title-text">Subscription Groups</h1>
     </div>
 </div>
+<div class="filter-data">
+    <div class="is-active">
+        <h6 class="radio-label">Is Active:</h6>
+        <div class="radio-btns">
+            <input type="checkbox" id="yes" name="is_active" value="yes" />
+            <label for="yes">Yes</label>
+            <input type="checkbox" id="no" name="is_active" value="no" />
+            <label for="no">No</label>
+        </div>
+    </div>
+</div>
