--- a/Views/STPBCF/Index.cshtml
+++ b/Views/STPBCF/Index.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "STP BCF";
 }
 <div class="page-header">
-    <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
+    <div class="page-title">
+        <h1 class="title-text">STP BCF</h1>
     </div>
 </div>
 
