--- a/Views/STPVPP/Index.cshtml
+++ b/Views/STPVPP/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "STP VPP";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+<div class="page-header">
+    <div class="page-title">
+        <h1 class="title-text">STP VPP</h1>
+    </div>
 </div>
