--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -16,6 +16,15 @@
             <label for="no">No</label>
         </div>
     </div>
+    <div class="groupID">
+        <label for="groupIDDropdown">Group ID:</label>
+        <select id="groupIDDropdown" name="groupIDDropdown" multiple>
+            <option value="SVP">SVP</option>
+            <option value="MM">MM</option>
+            <option value="Admin">Admin</option>
+            <option value="NYBO">NYBO MM Assist</option>
+        </select>
+    </div>
     <div class="group">
         <label for="groupsDropdown">Group:</label>
         <select id="groupsDropdown" name="groupsDropdown" multiple>
@@ -23,6 +32,15 @@
             <option value="Managers">Ecomm Merchandise Managers</option>
             <option value="Admins">Ecomm Admins</option>
             <option value="Merch Admins">Ecomm Merch Admins</option>
+        </select>
+    </div>
+    <div class="master-group">
+        <label for="masterGroupDropdown">Group:</label>
+        <select id="masterGroupDropdown" name="masterGroupDropdown" multiple>
+            <option value="Merchandising">Merchandising</option>
+            <option value="Admin">Admin</option>
+            <option value="Fulfillment">Fulfillment</option>
+            <option value="EcommIT">Ecomm IT</option>
         </select>
     </div>
 </div>
