--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -7,40 +7,46 @@
     </div>
 </div>
 <div class="filter-data">
-    <div class="is-active">
-        <h6 class="radio-label">Is Active:</h6>
-        <div class="radio-btns">
-            <input type="checkbox" id="yes" name="is_active" value="yes" />
-            <label for="yes">Yes</label>
-            <input type="checkbox" id="no" name="is_active" value="no" />
-            <label for="no">No</label>
+    <div class="first-row">
+        <div class="is-active">
+            <h6 class="radio-label">Is Active:</h6>
+            <div class="radio-btns">
+                <input type="checkbox" id="yes" name="is_active" value="yes" />
+                <label id ="yesBox" for="yes">Yes</label>
+                <input type="checkbox" id="no" name="is_active" value="no" />
+                <label for="no">No</label>
+            </div>
+        </div>
+        <div class="groupID">
+            <label for="groupIDDropdown">Group ID:</label>
+            <select id="groupIDDropdown" name="groupIDDropdown" multiple>
+                <option value="SVP">SVP</option>
+                <option value="MM">MM</option>
+                <option value="Admin">Admin</option>
+                <option value="NYBO">NYBO MM Assist</option>
+            </select>
         </div>
     </div>
-    <div class="groupID">
-        <label for="groupIDDropdown">Group ID:</label>
-        <select id="groupIDDropdown" name="groupIDDropdown" multiple>
-            <option value="SVP">SVP</option>
-            <option value="MM">MM</option>
-            <option value="Admin">Admin</option>
-            <option value="NYBO">NYBO MM Assist</option>
-        </select>
+    
+    <div class="second-row">
+        <div class="group">
+            <label for="groupsDropdown">Group:</label>
+            <select id="groupsDropdown" name="groupsDropdown" multiple>
+                <option value="SVP">Ecomm SVP, Merchandising and Planning</option>
+                <option value="Managers">Ecomm Merchandise Managers</option>
+                <option value="Admins">Ecomm Admins</option>
+                <option value="Merch Admins">Ecomm Merch Admins</option>
+            </select>
+        </div>
+        <div class="master-group">
+            <label for="masterGroupDropdown">Master Group:</label>
+            <select id="masterGroupDropdown" name="masterGroupDropdown" multiple>
+                <option value="Merchandising">Merchandising</option>
+                <option value="Admin">Admin</option>
+                <option value="Fulfillment">Fulfillment</option>
+                <option value="EcommIT">Ecomm IT</option>
+            </select>
+        </div>
     </div>
-    <div class="group">
-        <label for="groupsDropdown">Group:</label>
-        <select id="groupsDropdown" name="groupsDropdown" multiple>
-            <option value="SVP">Ecomm SVP, Merchandising and Planning</option>
-            <option value="Managers">Ecomm Merchandise Managers</option>
-            <option value="Admins">Ecomm Admins</option>
-            <option value="Merch Admins">Ecomm Merch Admins</option>
-        </select>
-    </div>
-    <div class="master-group">
-        <label for="masterGroupDropdown">Group:</label>
-        <select id="masterGroupDropdown" name="masterGroupDropdown" multiple>
-            <option value="Merchandising">Merchandising</option>
-            <option value="Admin">Admin</option>
-            <option value="Fulfillment">Fulfillment</option>
-            <option value="EcommIT">Ecomm IT</option>
-        </select>
-    </div>
+   
 </div>
