--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="filter-data">
     <div class="first-row">
         <div class="is-active">
-            <h6 class="radio-label">Is Active:</h6>
+            <p class="radio-label filter-label">Is Active:</p>
             <div class="radio-btns">
                 <input type="checkbox" id="yes" name="is_active" value="yes" />
                 <label id ="yesBox" for="yes">Yes</label>
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="groupID">
-            <label for="groupIDDropdown">Group ID:</label>
+            <label class="filter-label" for="groupIDDropdown">Group ID:</label>
             <select id="groupIDDropdown" name="groupIDDropdown" multiple>
                 <option value="SVP">SVP</option>
                 <option value="MM">MM</option>
@@ -30,7 +30,7 @@
     
     <div class="second-row">
         <div class="group">
-            <label for="groupsDropdown">Group:</label>
+            <label class="filter-label" for="groupsDropdown">Group:</label>
             <select id="groupsDropdown" name="groupsDropdown" multiple>
                 <option value="SVP">Ecomm SVP, Merchandising and Planning</option>
                 <option value="Managers">Ecomm Merchandise Managers</option>
@@ -39,7 +39,7 @@
             </select>
         </div>
         <div class="master-group">
-            <label for="masterGroupDropdown">Master Group:</label>
+            <label class="filter-label" for="masterGroupDropdown">Master Group:</label>
             <select id="masterGroupDropdown" name="masterGroupDropdown" multiple>
                 <option value="Merchandising">Merchandising</option>
                 <option value="Admin">Admin</option>
