Added view data button

--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -48,5 +48,6 @@
             </select>
         </div>
     </div>
-   
+    
+    <button class="btnViewData" type="button">View Data</button>
 </div>
