--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -189,3 +189,13 @@ body {
 .btnViewData:focus {
     outline: none;
 }
+
+.separator-line {
+    position: absolute;
+    width: 100%;
+    height: 0px;
+    left: 0px;
+    top: 320px;
+    border: 2px solid #BDBDBD;
+    box-shadow: 0px 2px 2px rgb(0 0 0 / 25%);
+}
