--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -180,11 +180,11 @@ body {
     width: 100px;
     border: none;
     border-radius: 8px;
-    box-shadow: 0 7px #999;
+    box-shadow: 0 5px #999;
 }
 
     .btnViewData:active {
-        box-shadow: 0 4px #666;
+        box-shadow: 0 2px #666;
         transform: translateY(4px);
     }
 
@@ -200,4 +200,8 @@ body {
     top: 290px;
     border: 2px solid #BDBDBD;
     box-shadow: 0px 2px 2px rgb(0 0 0 / 25%);
+}
+
+.nav-option{
+    margin-inline: 0.8rem;
 }
