Passing Subscriptions model to controller

--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -1,11 +1,13 @@
 ﻿@{
     ViewData["Title"] = "User Subscriptions Groups";
 }
+
 <div class="page-header">
     <div class="page-title">
         <h1 class="title-text">User Subscription Groups</h1>
     </div>
 </div>
+
 <div class="filter-data">
     <div class="first-row">
         <div class="is-active">
@@ -30,8 +32,8 @@
     
     <div class="second-row">
         <div class="group">
-            <label class="filter-label" for="groupsDropdown">Group:</label>
-            <select id="groupsDropdown" name="groupsDropdown" multiple>
+            <label class="filter-label" for="groupDropdown">Group:</label>
+            <select id="groupDropdown" name="groupDropdown" multiple>
                 <option value="SVP">Ecomm SVP, Merchandising and Planning</option>
                 <option value="Managers">Ecomm Merchandise Managers</option>
                 <option value="Admins">Ecomm Admins</option>
