Add New User Button Added and Styled

--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -59,6 +59,10 @@
 <div class="separator-line">
 </div>
 
-<div id="userSubscriptionData">
+<div id="addNewUserSubscription">
+    <h4 class="addNewText">Add New User</h4>
+    <button class="addNewBtn"><i class="fas fa-plus-circle"></i></button>
+</div>
 
+<div id="userSubscriptionData">
 </div>
