--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -212,6 +212,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 90%;
+    margin-bottom: 45px;
 }
 
 .userSubscriptionsTable {
@@ -288,10 +289,9 @@ body {
 }
 
 .btnSubmit {
-    /*float: right;
-    margin-top: 1%;
-    margin-bottom: 6%;
-    margin-right: 2.5%;*/
+    position: absolute;
+    bottom: 75px;
+    right: 3.4%;
 
     width: 100px;
     border: none;
