--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -213,6 +213,19 @@ body {
     margin-right: auto;
     width: 90%;
     margin-bottom: 45px;
+    overflow: scroll;
+}
+
+@media screen and (max-width: 1920px) {
+    #userSubscriptionData {
+        max-height: 435px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    #userSubscriptionData {
+        max-height: 210px;
+    }
 }
 
 .userSubscriptionsTable {
