Adding Logic to Get Selected Item from Table

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -239,7 +239,7 @@ body {
     text-align: center;
 }
 
-.userSubscriptionsEntry {
+.userSubscriptionsEntry_isActive, .userSubscriptionsEntry_Group, .userSubscriptionsEntry_GroupID, .userSubscriptionsEntry_masterGroup {
     text-align: center;
 }
 
