--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -61,7 +61,7 @@
 
 <div id="addNewUserSubscription">
     <h4 class="addNewText">Add New User</h4>
-    <button class="addNewBtn"><i class="fas fa-plus-circle"></i></button>
+    <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle"></i></button>
 </div>
 
 <div id="userSubscriptionData">
