--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -61,7 +61,8 @@
 
 <div id="addNewUserSubscription">
     <h4 class="addNewText">Add New User</h4>
-    <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle"></i></button>
+    <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle" onclick="location.href='@Url.Action("AddNewUser", "SubscriptionGroups")'"></i></button>
+
 </div>
 
 <div id="userSubscriptionData">
