Split up JS for Different Pages in Different Files

--- a/Views/SubscriptionGroups/AddNewUser.cshtml
+++ b/Views/SubscriptionGroups/AddNewUser.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Add New User";
 }
 
+@section Scripts{
+    <script src="~/js/addNewUser.js"></script>
+}
+
 <div class="page-header">
     <div class="page-title">
         <h1 class="title-text">Add New User</h1>
@@ -12,19 +16,27 @@
 
 
 <div class="filter-data">
-    <div class="first-row">
+    <div class="addnew-row">
+        <label class="filter-label" for="email-input">Email: </label>
+        <input type="text" id="addNew_UserEmail" class="email-input" name="email-input" />
+    </div>
+
+    <div class="addnew-row">
         <div class="is-active">
             <p class="radio-label filter-label">Is Active:</p>
             <div class="radio-btns">
-                <input type="checkbox" id="checkYes" name="is_active" value="yes" />
-                <label id="yesBox" for="yes">Yes</label>
-                <input type="checkbox" id="checkNo" name="is_active" value="no" />
+                <input type="checkbox" id="addNew_checkYes" name="is_active" value="yes" />
+                <label id="addNew_yesBox" class="yes-box" for="yes">Yes</label>
+                <input type="checkbox" id="addNew_checkNo" name="is_active" value="no" />
                 <label for="no">No</label>
             </div>
         </div>
+    </div>
+
+    <div class="addnew-row">
         <div class="groupID">
             <label class="filter-label" for="groupIDDropdown">Group ID:</label>
-            <select id="groupIDDropdown" name="groupIDDropdown" multiple>
+            <select id="addNew_groupIDDropdown" name="groupIDDropdown" multiple>
                 @foreach (var groupID in @Model.groupsIDList)
                 {
                     <option value=@groupID> @groupID </option>
@@ -33,19 +45,22 @@
         </div>
     </div>
 
-    <div class="second-row">
+    <div class="addnew-row">
         <div class="group">
             <label class="filter-label" for="groupDropdown">Group:</label>
-            <select id="groupDropdown" name="groupDropdown" multiple>
+            <select id="addNew_groupDropdown" name="groupDropdown" multiple>
                 @foreach (var group in @Model.groupsList)
                 {
                     <option value=@group> @group </option>
                 }
             </select>
         </div>
+    </div>
+
+    <div class="addnew-row">
         <div class="master-group">
             <label class="filter-label" for="masterGroupDropdown">Master Group:</label>
-            <select id="masterGroupDropdown" name="masterGroupDropdown" multiple>
+            <select id="addNew_masterGroupDropdown" name="masterGroupDropdown" multiple>
                 @foreach (var master_group in @Model.masterGroupsList)
                 {
                     <option value=@master_group> @master_group </option>
@@ -55,4 +70,3 @@
     </div>
 </div>
 
-    
