Finished styling add new page

--- a/Views/SubscriptionGroups/AddNewUser.cshtml
+++ b/Views/SubscriptionGroups/AddNewUser.cshtml
@@ -68,5 +68,10 @@
             </select>
         </div>
     </div>
+    <div class="addnew-row-last">
+        <button id="backToUsers" class="btnAddUserPage" type="button" onclick="location.href='@Url.Action("Index", "SubscriptionGroups")'">Back</button>
+        <button id="addUserSubmit" class="btnAddUserPage" type="button">Submit User</button>
+    </div>
+
 </div>
 
