Changed Is Active to Radio Buttons in Add New User

--- a/Views/SubscriptionGroups/AddNewUser.cshtml
+++ b/Views/SubscriptionGroups/AddNewUser.cshtml
@@ -25,9 +25,9 @@
         <div class="is-active">
             <p class="radio-label filter-label">Is Active:</p>
             <div class="radio-btns">
-                <input type="checkbox" id="addNew_checkYes" name="is_active" value="yes" />
+                <input type="radio" id="addNew_checkYes" name="is_active" value="yes" />
                 <label id="addNew_yesBox" class="yes-box" for="yes">Yes</label>
-                <input type="checkbox" id="addNew_checkNo" name="is_active" value="no" />
+                <input type="radio" id="addNew_checkNo" name="is_active" value="no" />
                 <label for="no">No</label>
             </div>
         </div>
