--- a/Views/SubscriptionGroups/AddNewUser.cshtml
+++ b/Views/SubscriptionGroups/AddNewUser.cshtml
@@ -36,7 +36,7 @@
     <div class="addnew-row">
         <div class="groupID">
             <label class="filter-label" for="groupIDDropdown">Group ID:</label>
-            <select id="addNew_groupIDDropdown" name="groupIDDropdown" multiple>
+            <select id="addNew_groupIDDropdown" name="groupIDDropdown">
                 @foreach (var groupID in @Model.groupsIDList)
                 {
                     <option value=@groupID> @groupID </option>
@@ -48,7 +48,7 @@
     <div class="addnew-row">
         <div class="group">
             <label class="filter-label" for="groupDropdown">Group:</label>
-            <select id="addNew_groupDropdown" name="groupDropdown" multiple>
+            <select id="addNew_groupDropdown" name="groupDropdown">
                 @foreach (var group in @Model.groupsList)
                 {
                     <option value=@group> @group </option>
@@ -60,7 +60,7 @@
     <div class="addnew-row">
         <div class="master-group">
             <label class="filter-label" for="masterGroupDropdown">Master Group:</label>
-            <select id="addNew_masterGroupDropdown" name="masterGroupDropdown" multiple>
+            <select id="addNew_masterGroupDropdown" name="masterGroupDropdown">
                 @foreach (var master_group in @Model.masterGroupsList)
                 {
                     <option value=@master_group> @master_group </option>
