--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -121,16 +121,15 @@ body {
 }
 
 .multiselect {
-    width: 290px;
     height: 33px;
 }
 
 .is-active {
-    width: 470px;
+    width: 200px;
     height: 38px;
-    padding: 12px 0;
+    padding: 14px 0;
     float: left;
-    margin-right: 110px;
+    margin-left: -45px;
 }
 
 .groupID {
@@ -140,27 +139,55 @@ body {
 }
 
 .group {
-    width: 470px;
     padding: 8px 0;
     float: left;
-    margin-right: 110px;
 }
 
 .master-group {
-    width: 470px;
     padding: 8px 0;
     float: left;
 }
+
+@media screen and (max-width: 1920px) {
+    .multiselect {
+        width: 290px;
+    }
+
+    .group {
+        width: 470px;
+    }
+
+    .master-group {
+        width: 470px;
+    }
+
+    .groupID {
+        width: 470px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .multiselect {
+        width: 250px;
+    }
+
+    .group {
+        width: 407px;
+    }
+
+    .master-group {
+        width: 407px;
+    }
+
+    .groupID {
+        width: 407px;
+    }
+}
+
 
 .first-row{
     width: 100%;
     display: inline-block;
-}
-
-.second-row {
-    width: 92%;
-    display: inline-block;
-    margin-top: -7px;
 }
 
 .addnew-row {
@@ -210,7 +237,7 @@ body {
     width: 100%;
     height: 0px;
     left: 0px;
-    top: 290px;
+    top: 238px;
     border: 2px solid #BDBDBD;
     box-shadow: 0px 2px 2px rgb(0 0 0 / 25%);
 }
