Fixed styling bug on add new page

--- a/Views/SubscriptionGroups/AddNewUser.cshtml
+++ b/Views/SubscriptionGroups/AddNewUser.cshtml
@@ -22,7 +22,7 @@
     </div>
 
     <div class="addnew-row">
-        <div class="is-active">
+        <div class="addnew-is-active">
             <p class="radio-label filter-label">Is Active:</p>
             <div class="radio-btns">
                 <input type="radio" id="addNew_checkYes" name="is_active" value="yes" />
