Organizing CSS into different files

--- a/Views/SubscriptionGroups/AddNewUser.cshtml
+++ b/Views/SubscriptionGroups/AddNewUser.cshtml
@@ -8,6 +8,8 @@
     <script src="~/js/addNewUser.js"></script>
 }
 
+<link rel="stylesheet" href="~/css/addNewUser.css" />
+
 <div class="page-header">
     <div class="page-title">
         <h1 class="title-text">Add New User</h1>
