--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -7,6 +7,7 @@
 @section Scripts{ 
     <script src ="~/js/userSubscriptions.js"></script>
 }
+<link rel="stylesheet" href="~/css/userSubscriptions.css" />
 
 <div class="page-header">
     <div class="page-title">
@@ -51,10 +52,9 @@
 <div class="separator-line">
 </div>
 
-<div id="addNewUserSubscription">
+<div class="addNewUserSubscription">
     <h4 class="addNewText">Add New User</h4>
     <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle" onclick="location.href='@Url.Action("AddNewUser", "SubscriptionGroups")'"></i></button>
-
 </div>
 
 <div id="userSubscriptionData">
