--- a/wwwroot/css/userSubscriptions.css
+++ b/wwwroot/css/userSubscriptions.css
@@ -77,9 +77,12 @@
 }
 
 .userSubscriptionsRow_Header {
-    border-bottom: 1px solid #ADADAD;
+    box-shadow: 0 0 0 1px black;
     height: 40px;
     background: #E5E5E5;
+    position: sticky;
+    top: 0px;
+    z-index: 10;
 }
 
 .deleteBtn {
