Removing edit buttons from table, clearing data on add new user

--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -38,10 +38,10 @@
         <div class="is-active">
             <p class="radio-label filter-label">Is Active:</p>
             <div class="radio-btns">
-                <input type="checkbox" id="checkYes" name="is_active" value="yes" />
-                <label id="yesBox" class="yes-box" for="yes">Yes</label>
-                <input type="checkbox" id="checkNo" name="is_active" value="no" />
-                <label for="no">No</label>
+                <input type="checkbox" id="checkYes" class="checkbox-isactive" name="is_active" value="yes" />
+                <label id="yesBox" class="yes-box form-check-label" for="yes">Yes</label>
+                <input type="checkbox" id="checkNo" class="checkbox-isactive" name="is_active" value="no" />
+                <label for="no" class="form-check-label">No</label>
             </div>
         </div>
     </div>
