--- a/Views/SubscriptionGroups/AddNewUser.cshtml
+++ b/Views/SubscriptionGroups/AddNewUser.cshtml
@@ -38,8 +38,8 @@
     <div class="addnew-row">
         <div class="groupID">
             <label class="filter-label" for="groupIDDropdown">Group ID:</label>
-            <select id="addNew_groupIDDropdown" name="groupIDDropdown">
-                <option value="" disabled selected>None Selected</option>
+            <select id="addNew_groupIDDropdown" name="groupIDDropdown" class="add-new-dropdown">
+                <option value="" disabled selected>Select a group ID...</option>
                 @foreach (var groupID in @Model.groupsIDList)
                 {
                     <option value=@groupID> @groupID </option>
@@ -51,8 +51,8 @@
     <div class="addnew-row">
         <div class="group">
             <label class="filter-label" for="groupDropdown">Group:</label>
-            <select id="addNew_groupDropdown" name="groupDropdown">
-                <option value="" disabled selected>None Selected</option>
+            <select id="addNew_groupDropdown" name="groupDropdown" class="add-new-dropdown">
+                <option value="" disabled selected>Select a group...</option>
                 @foreach (var group in @Model.groupsList)
                 {
                     <option value=@group> @group </option>
@@ -64,8 +64,8 @@
     <div class="addnew-row">
         <div class="master-group">
             <label class="filter-label" for="masterGroupDropdown">Master Group:</label>
-            <select id="addNew_masterGroupDropdown" name="masterGroupDropdown">
-                <option value="" disabled selected>None Selected</option>
+            <select id="addNew_masterGroupDropdown" name="masterGroupDropdown" class="add-new-dropdown">
+                <option value="" disabled selected>Select a master group...</option>
                 @foreach (var master_group in @Model.masterGroupsList)
                 {
                     <option value=@master_group> @master_group </option>
