--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -15,6 +15,14 @@
     </div>
 </div>
 
+<div class="hidden-groupIDs">
+    @for (int i = 0; i < Model.groupsIDList.Count; i++)
+    {
+        @Html.HiddenFor(groupID => Model.groupsIDList[i])
+    }
+</div>
+
+
 <div class="filter-data">
     <div class="first-row">
         <div class="master-group">
