Fixing Alignment on Add New Page

--- a/Views/SubscriptionGroups/AddNewUser.cshtml
+++ b/Views/SubscriptionGroups/AddNewUser.cshtml
@@ -19,8 +19,10 @@
 
 <div class="filter-data">
     <div class="addnew-row">
-        <label class="filter-label" for="email-input">Email: </label>
-        <input type="text" id="addNew_UserEmail" class="email-input" name="email-input" />
+        <div class="email">
+            <label class="filter-label" for="email-input">Email: </label>
+            <input type="text" id="addNew_UserEmail" class="email-input" name="email-input" />
+        </div>
     </div>
 
     <div class="addnew-row">
